source/global.css
html,
body {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: var(--typo-font-family-main);
  font-size: var(--typo-size-m);
  line-height: var(--typo-line-height-m);
  background-color: var(--color-page-bg);
  color: var(--color-text);
}

*,
*::before,
*::after {
  box-sizing: inherit;
  margin: 0;
  padding: 0;
}

/* When editing global links styles don't forget to update <Text design="link"> styles */
a {
  text-decoration: none;
  color: var(--color-text-link);
  cursor: pointer;
}

a:hover {
  text-decoration: underline;
}

body:not(:global(.js-focus-visible)) a:focus,
a:global(.focus-visible) {
  outline: 2px solid color(var(--color-primary) alpha(30%));
}

